[tool.poetry]
name = "prog_music"
version = "0.1.0"
description = "Programmatci music creation"
authors = ["Peter Kalt <pkalt@psiguitar.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-sonic = "^0.4.1"
black = "^20.8b1"
flake8 = "^3.9.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
